--- a/package.json
+++ b/package.json
@@ -56,7 +56,12 @@
         "watch:labextension": "jupyter labextension watch ."
     },
     "dependencies": {
-        "@jupyterlab/application": "^4.0.0"
+        "@jupyterlab/application": "^4.0.0",
+        "@jupyterlab/apputils": "^4.0.0",
+        "@jupyterlab/docmanager": "^4.0.0",
+        "@jupyterlab/filebrowser": "^4.0.0",
+        "@jupyterlab/statedb": "^4.0.0",
+        "@lumino/algorithm": "^2.0.0"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
