Add server backend infrastructure

--- a/package.json
+++ b/package.json
@@ -94,6 +94,16 @@
         "access": "public"
     },
     "jupyterlab": {
+        "discovery": {
+            "server": {
+                "managers": [
+                    "pip"
+                ],
+                "base": {
+                    "name": "jupyterlab_custom_order"
+                }
+            }
+        },
         "extension": true,
         "outputDir": "jupyterlab_custom_order/labextension"
     },
